--- a/.github/workflows/image.yml
+++ b/.github/workflows/image.yml
@@ -4,45 +4,89 @@ on:
     branches: [main]
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        include:
+          - os: ubuntu-24.04
+            platform: amd64
+          - os: ubuntu-24.04-arm
+            platform: arm64
     steps:
-    - uses: actions/checkout@f43a0e5ff2bd294095638e18286ca9a3d1956744 # v3
+      - uses: actions/checkout@f43a0e5ff2bd294095638e18286ca9a3d1956744 # v3
 
-    - run: docker login --username '${{ github.actor }}' --password-stdin ghcr.io <<< "$GHCR_TOKEN"
-      env:
-        GHCR_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      if: github.event_name != 'pull_request'
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@b5ca514318bd6ebac0fb2aedd5d36ec1b5c232a2 # v3.10.0
 
-    - run: docker buildx create --driver docker-container --use
+      - name: Build
+        uses: docker/build-push-action@32945a339266b759abcbdc89316275140b0fc960 # v6.8.10
+        with:
+          context: .
+          cache-from: ghcr.io/getsentry/taskbroker:latest
+          cache-to: type=inline
+          platforms: linux/${{ matrix.platform }}
+          tags: taskbroker:${{ matrix.platform }}
+          outputs: type=docker,dest=/tmp/taskbroker-${{ matrix.platform }}.tar
+          push: false
 
-    - name: build
-      run: |
-        set -euxo pipefail
+      - name: Upload Image
+        uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02 # v4.6.2
+        with:
+          name: taskbroker-${{ matrix.platform }}
+          path: /tmp/taskbroker-${{ matrix.platform }}.tar
 
-        if [ ${{ github.event_name }} = 'push' ]; then
-          args=(
-            --tag ghcr.io/getsentry/taskbroker:latest
-            --tag ghcr.io/getsentry/taskbroker:amd64-latest
-            --push
-          )
-        else
-          args=()
-        fi
+  assemble-taskbroker-image:
+    runs-on: ubuntu-latest
+    needs: [build]
+    if: ${{ github.event_name != 'pull_request' }}
+    steps:
+      - uses: actions/checkout@f43a0e5ff2bd294095638e18286ca9a3d1956744 # v3
 
-        docker buildx build \
-          --pull \
-          --platform linux/amd64 \
-          --build-arg "TASKBROKER_GIT_REVISION=${{ github.sha }}" \
-          --cache-from ghcr.io/getsentry/taskbroker:latest \
-          --cache-to type=inline \
-          --tag ghcr.io/getsentry/taskbroker:${{ github.sha }} \
-          "${args[@]}" \
-          .
+      - run: docker login --username '${{ github.actor }}' --password-stdin ghcr.io <<< "$GHCR_TOKEN"
+        env:
+          GHCR_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@b5ca514318bd6ebac0fb2aedd5d36ec1b5c232a2 # v3.10.0
+
+      - name: Download amd64 Image
+        uses: actions/download-artifact@d3f86a106a0bac45b974a628896c90dbdf5c8093 # v4.3.2
+        with:
+          name: taskbroker-amd64
+          path: /tmp
+
+      - name: Load amd64 Image
+        run: docker load --input /tmp/taskbroker-amd64.tar
+
+      - name: Download arm64 Image
+        uses: actions/download-artifact@d3f86a106a0bac45b974a628896c90dbdf5c8093 # v4.3.2
+        with:
+          name: taskbroker-arm64
+          path: /tmp
+
+      - name: Load arm64 Image
+        run: docker load --input /tmp/taskbroker-arm64.tar
+
+      - name: Push to GitHub Container Registry
+        run: |
+          docker tag taskbroker:amd64 ghcr.io/getsentry/taskbroker:${{ github.sha }}-amd64
+          docker push ghcr.io/getsentry/taskbroker:${{ github.sha }}-amd64
+
+          docker tag taskbroker:arm64 ghcr.io/getsentry/taskbroker:${{ github.sha }}-arm64
+          docker push ghcr.io/getsentry/taskbroker:${{ github.sha }}-arm64
+
+          docker manifest create \
+            ghcr.io/getsentry/taskbroker:${{ github.sha }} \
+            ghcr.io/getsentry/taskbroker:latest \
+            --amend ghcr.io/getsentry/taskbroker:${{ github.sha }}-amd64 \
+            --amend ghcr.io/getsentry/taskbroker:${{ github.sha }}-arm64
+
+          docker manifest push ghcr.io/getsentry/taskbroker:${{ github.sha }}
 
   publish-taskbroker-to-dockerhub:
     runs-on: ubuntu-latest
     if: ${{ github.ref_name == 'main' }}
-    needs: [build]
+    needs: [assemble-taskbroker-image]
     steps:
       - uses: actions/checkout@f43a0e5ff2bd294095638e18286ca9a3d1956744 # v3
 
