--- a/.github/workflows/image.yml
+++ b/.github/workflows/image.yml
@@ -77,11 +77,24 @@ jobs:
 
           docker manifest create \
             ghcr.io/getsentry/taskbroker:${{ github.sha }} \
-            ghcr.io/getsentry/taskbroker:latest \
             --amend ghcr.io/getsentry/taskbroker:${{ github.sha }}-amd64 \
             --amend ghcr.io/getsentry/taskbroker:${{ github.sha }}-arm64
 
           docker manifest push ghcr.io/getsentry/taskbroker:${{ github.sha }}
+
+          docker manifest create \
+            ghcr.io/getsentry/taskbroker:latest \
+            --amend ghcr.io/getsentry/taskbroker:${{ github.sha }}-amd64 \
+            --amend ghcr.io/getsentry/taskbroker:${{ github.sha }}-arm64
+
+          docker manifest push ghcr.io/getsentry/taskbroker:latest
+
+          docker manifest create \
+            ghcr.io/getsentry/taskbroker:nightly \
+            --amend ghcr.io/getsentry/taskbroker:${{ github.sha }}-amd64 \
+            --amend ghcr.io/getsentry/taskbroker:${{ github.sha }}-arm64
+
+          docker manifest push ghcr.io/getsentry/taskbroker:nightly
 
   publish-taskbroker-to-dockerhub:
     runs-on: ubuntu-latest
