--- a/.github/workflows/image.yml
+++ b/.github/workflows/image.yml
@@ -21,16 +21,18 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@b5ca514318bd6ebac0fb2aedd5d36ec1b5c232a2 # v3.10.0
 
-      - name: Build
-        uses: docker/build-push-action@32945a339266b759abcbdc89316275140b0fc960 # v6.8.10
+      - name: Build and push taskbroker image
+        uses: getsentry/action-build-and-push-images@a53f146fc1ea3cb404f2dcf7378f5b60dd98d3ca
         with:
-          context: .
-          cache-from: ghcr.io/getsentry/taskbroker:latest
-          cache-to: type=inline
+          image_name: 'taskbroker'
           platforms: linux/${{ matrix.platform }}
-          tags: taskbroker:${{ matrix.platform }}
+          dockerfile_path: './Dockerfile'
+          tags: ghcr.io/getsentry/taskbroker:${{ github.event.pull_request.head.sha || github.sha }}-${{ matrix.platform }}
+          ghcr: false
+          google_ar: false
+          tag_nightly: false
+          tag_latest: false
           outputs: type=docker,dest=/tmp/taskbroker-${{ matrix.platform }}.tar
-          push: false
 
       - name: Upload Image
         uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02 # v4.6.2
@@ -70,55 +72,12 @@ jobs:
       - name: Load arm64 Image
         run: docker load --input /tmp/taskbroker-arm64.tar
 
-      - name: Push to GitHub Container Registry
+      - name: Create multiplatform manifests
         run: |
-          docker tag taskbroker:amd64 ghcr.io/getsentry/taskbroker:${{ github.sha }}-amd64
-          docker push ghcr.io/getsentry/taskbroker:${{ github.sha }}-amd64
-
-          docker tag taskbroker:arm64 ghcr.io/getsentry/taskbroker:${{ github.sha }}-arm64
-          docker push ghcr.io/getsentry/taskbroker:${{ github.sha }}-arm64
-
-          docker manifest create \
-            ghcr.io/getsentry/taskbroker:${{ github.sha }} \
-            --amend ghcr.io/getsentry/taskbroker:${{ github.sha }}-amd64 \
-            --amend ghcr.io/getsentry/taskbroker:${{ github.sha }}-arm64
-
-          docker manifest push ghcr.io/getsentry/taskbroker:${{ github.sha }}
-
-          docker manifest create \
-            ghcr.io/getsentry/taskbroker:latest \
-            --amend ghcr.io/getsentry/taskbroker:${{ github.sha }}-amd64 \
-            --amend ghcr.io/getsentry/taskbroker:${{ github.sha }}-arm64
-
-          docker manifest push ghcr.io/getsentry/taskbroker:latest
-
-          docker manifest create \
-            ghcr.io/getsentry/taskbroker:nightly \
-            --amend ghcr.io/getsentry/taskbroker:${{ github.sha }}-amd64 \
-            --amend ghcr.io/getsentry/taskbroker:${{ github.sha }}-arm64
-
-          docker manifest push ghcr.io/getsentry/taskbroker:nightly
-
-  publish-taskbroker-to-dockerhub:
-    runs-on: ubuntu-latest
-    needs: [assemble-taskbroker-image]
-    steps:
-      - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
-
-      - shell: bash
-        run: |
-          echo "${{ secrets.DOCKER_HUB_RW_TOKEN }}" | docker login --username=sentrybuilder --password-stdin
-
-          # We push 3 tags to Dockerhub:
-          # first, the full sha of the commit
-          docker buildx imagetools create --tag getsentry/taskbroker:${GITHUB_SHA} ghcr.io/getsentry/taskbroker:${{ github.sha }}
-
-          # second, the short sha of the commit
-          SHORT_SHA=$(git rev-parse --short "$GITHUB_SHA")
-          docker buildx imagetools create --tag getsentry/taskbroker:${SHORT_SHA} ghcr.io/getsentry/taskbroker:${{ github.sha }}
-
-          # finally, nightly
-          docker buildx imagetools create --tag getsentry/taskbroker:nightly ghcr.io/getsentry/taskbroker:${{ github.sha }}
+          docker buildx imagetools create \
+            --tag ghcr.io/getsentry/taskbroker:${{ github.sha }} \
+            ghcr.io/getsentry/taskbroker:${{ github.sha }}-amd64 \
+            ghcr.io/getsentry/taskbroker:${{ github.sha }}-arm64
 
   self-hosted-end-to-end:
     needs: [assemble-taskbroker-image]
@@ -143,27 +102,13 @@ jobs:
         GHCR_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       if: github.event_name != 'pull_request'
 
-    - run: docker buildx create --driver docker-container --use
-
-    - name: build
-      run: |
-        set -euxo pipefail
-
-        if [ ${{ github.event_name }} = 'push' ]; then
-          args=(
-            --tag ghcr.io/getsentry/taskworker:latest
-            --tag ghcr.io/getsentry/taskworker:amd64-latest
-            --push
-          )
-        else
-          args=()
-        fi
-
-        docker buildx build \
-          --pull \
-          --platform linux/amd64 \
-          --cache-from ghcr.io/getsentry/taskworker:latest \
-          --cache-to type=inline \
-          --tag ghcr.io/getsentry/taskworker:${{ github.sha }} \
-          "${args[@]}" \
-          ./python
+    - name: Build and push taskworker image
+      uses: getsentry/action-build-and-push-images@a53f146fc1ea3cb404f2dcf7378f5b60dd98d3ca
+      with:
+        image_name: 'taskworker'
+        platforms: linux/amd64
+        dockerfile_path: './python/Dockerfile'
+        ghcr: true
+        tag_nightly: false
+        tags: ghcr.io/getsentry/taskworker:amd64-latest
+        tag_latest: true
