--- a/.github/workflows/image.yml
+++ b/.github/workflows/image.yml
@@ -27,6 +27,7 @@ jobs:
           image_name: 'taskbroker'
           platforms: linux/${{ matrix.platform }}
           dockerfile_path: './Dockerfile'
+          build_args: TASKBROKER_GIT_REVISION=${{ github.sha }}
           tags: ghcr.io/getsentry/taskbroker:${{ github.sha }}-${{ matrix.platform }}
           ghcr: false
           google_ar: false
@@ -43,7 +44,7 @@ jobs:
   assemble-taskbroker-image:
     runs-on: ubuntu-latest
     needs: [build]
-    if: ${{ github.event_name != 'pull_request' }}
+    # if: ${{ github.event_name != 'pull_request' }}
     steps:
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
 
