--- a/.github/workflows/image.yml
+++ b/.github/workflows/image.yml
@@ -18,9 +18,6 @@ jobs:
     steps:
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@b5ca514318bd6ebac0fb2aedd5d36ec1b5c232a2 # v3.10.0
-
       - name: Build and push taskbroker image
         uses: getsentry/action-build-and-push-images@a53f146fc1ea3cb404f2dcf7378f5b60dd98d3ca
         with:
@@ -40,6 +37,47 @@ jobs:
         with:
           name: taskbroker-${{ matrix.platform }}
           path: /tmp/taskbroker-${{ matrix.platform }}.tar
+
+  build-production:
+    runs-on: ubuntu-24.04
+    if: github.ref_name == github.event.repository.default_branch
+    steps:
+      - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+
+      - name: Build and push taskbroker image
+        uses: getsentry/action-build-and-push-images@a53f146fc1ea3cb404f2dcf7378f5b60dd98d3ca
+        with:
+          image_name: 'taskbroker'
+          platforms: linux/amd64
+          dockerfile_path: './Dockerfile'
+          build_args: TASKBROKER_GIT_REVISION=${{ github.sha }}
+          ghcr: false
+          google_ar: true
+          tag_nightly: false
+          tag_latest: true
+          # TODO: remove this once we cut over GoCD to using gha for prod images
+          tag_suffix: -gha
+          google_ar_image_name: us-central1-docker.pkg.dev/sentryio/taskbroker/image:${{ github.sha }}
+          google_workload_identity_provider: projects/868781662168/locations/global/workloadIdentityPools/prod-github/providers/github-oidc-pool
+          google_service_account: gha-gcr-push@sac-prod-sa.iam.gserviceaccount.com
+
+      - name: Build and push taskworker image
+        uses: getsentry/action-build-and-push-images@a53f146fc1ea3cb404f2dcf7378f5b60dd98d3ca
+        with:
+          image_name: 'taskworker'
+          platforms: linux/amd64
+          dockerfile_path: './python/Dockerfile'
+          build_context: './python'
+          ghcr: false
+          google_ar: true
+          tag_nightly: false
+          tag_latest: true
+          # TODO: remove this once we cut over GoCD to using gha for prod images
+          tag_suffix: -gha
+          google_ar_image_name: us-central1-docker.pkg.dev/sentryio/taskworker/image:${{ github.sha }}
+          google_workload_identity_provider: projects/868781662168/locations/global/workloadIdentityPools/prod-github/providers/github-oidc-pool
+          google_service_account: gha-gcr-push@sac-prod-sa.iam.gserviceaccount.com
+
 
   assemble-taskbroker-image:
     runs-on: ubuntu-latest
@@ -75,6 +113,7 @@ jobs:
 
       - name: Create multiplatform manifests
         run: |
+          docker image ls
           docker buildx imagetools create \
             --tag ghcr.io/getsentry/taskbroker:${{ github.sha }} \
             ghcr.io/getsentry/taskbroker:${{ github.sha }}-amd64 \
