--- a/.github/workflows/image.yml
+++ b/.github/workflows/image.yml
@@ -113,11 +113,11 @@ jobs:
 
       - name: Create multiplatform manifests
         run: |
-          docker image ls
-          docker buildx imagetools create \
-            --tag ghcr.io/getsentry/taskbroker:${{ github.sha }} \
+          docker manifest create \
+            ghcr.io/getsentry/taskbroker:${{ github.sha }} \
             ghcr.io/getsentry/taskbroker:${{ github.sha }}-amd64 \
             ghcr.io/getsentry/taskbroker:${{ github.sha }}-arm64
+          docker manifest push ghcr.io/getsentry/taskbroker:${{ github.sha }}
 
   self-hosted-end-to-end:
     needs: [assemble-taskbroker-image]
