--- a/.github/workflows/image.yml
+++ b/.github/workflows/image.yml
@@ -32,51 +32,10 @@ jobs:
           tag_nightly: false
           tag_latest: false
 
-  build-production:
-    runs-on: ubuntu-24.04
-    if: github.ref_name == github.event.repository.default_branch
-    steps:
-      - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
-
-      - name: Build and push taskbroker image
-        uses: getsentry/action-build-and-push-images@a53f146fc1ea3cb404f2dcf7378f5b60dd98d3ca
-        with:
-          image_name: 'taskbroker'
-          platforms: linux/amd64
-          dockerfile_path: './Dockerfile'
-          build_args: TASKBROKER_GIT_REVISION=${{ github.sha }}
-          ghcr: false
-          google_ar: true
-          tag_nightly: false
-          tag_latest: true
-          # TODO: remove this once we cut over GoCD to using gha for prod images
-          tag_suffix: -gha
-          google_ar_image_name: us-central1-docker.pkg.dev/sentryio/taskbroker/image:${{ github.sha }}
-          google_workload_identity_provider: projects/868781662168/locations/global/workloadIdentityPools/prod-github/providers/github-oidc-pool
-          google_service_account: gha-gcr-push@sac-prod-sa.iam.gserviceaccount.com
-
-      - name: Build and push taskworker image
-        uses: getsentry/action-build-and-push-images@a53f146fc1ea3cb404f2dcf7378f5b60dd98d3ca
-        with:
-          image_name: 'taskworker'
-          platforms: linux/amd64
-          dockerfile_path: './python/Dockerfile'
-          build_context: './python'
-          ghcr: false
-          google_ar: true
-          tag_nightly: false
-          tag_latest: true
-          # TODO: remove this once we cut over GoCD to using gha for prod images
-          tag_suffix: -gha
-          google_ar_image_name: us-central1-docker.pkg.dev/sentryio/taskworker/image:${{ github.sha }}
-          google_workload_identity_provider: projects/868781662168/locations/global/workloadIdentityPools/prod-github/providers/github-oidc-pool
-          google_service_account: gha-gcr-push@sac-prod-sa.iam.gserviceaccount.com
-
-
   assemble-taskbroker-image:
     runs-on: ubuntu-latest
     needs: [build]
-    # if: ${{ github.event_name != 'pull_request' }}
+    if: ${{ (github.ref_name == 'main' || startsWith(github.ref_name, 'releases/')) && github.event_name != 'pull_request' }}
     steps:
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
 
@@ -91,6 +50,8 @@ jobs:
         run: |
           docker buildx imagetools create \
             --tag ghcr.io/getsentry/taskbroker:${{ github.event.pull_request.head.sha || github.sha }} \
+            --tag ghcr.io/getsentry/taskbroker:nightly \
+            --tag ghcr.io/getsentry/taskbroker:latest \
             ghcr.io/getsentry/taskbroker:${{ github.event.pull_request.head.sha || github.sha }}-amd64 \
             ghcr.io/getsentry/taskbroker:${{ github.event.pull_request.head.sha || github.sha }}-arm64
 
