--- a/.github/workflows/image.yml
+++ b/.github/workflows/image.yml
@@ -15,6 +15,9 @@ jobs:
           - os: ubuntu-24.04-arm
             platform: arm64
     name: build-${{ matrix.platform }}
+    permissions:
+      contents: read
+      packages: write
     steps:
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
 
@@ -36,6 +39,9 @@ jobs:
     runs-on: ubuntu-latest
     needs: [build]
     if: ${{ (github.ref_name == 'main' || startsWith(github.ref_name, 'releases/')) && github.event_name != 'pull_request' }}
+    permissions:
+      contents: read
+      packages: write
     steps:
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
 
@@ -70,6 +76,9 @@ jobs:
 
   build-taskworker:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
     steps:
     - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
 
