test publish on pr

--- a/.github/workflows/image.yml
+++ b/.github/workflows/image.yml
@@ -82,6 +82,7 @@ jobs:
           google_ar: true
           tag_nightly: false
           tag_latest: true
+          publish_on_pr: true
           # TODO: remove this once we cut over GoCD to using gha for prod images
           tag_suffix: -gha
           google_ar_image_name: us-central1-docker.pkg.dev/sentryio/taskbroker/image:${{ github.sha }}
@@ -99,6 +100,7 @@ jobs:
           google_ar: true
           tag_nightly: false
           tag_latest: true
+          publish_on_pr: true
           # TODO: remove this once we cut over GoCD to using gha for prod images
           tag_suffix: -gha
           google_ar_image_name: us-central1-docker.pkg.dev/sentryio/taskworker/image:${{ github.sha }}
