--- a/.github/workflows/image.yml
+++ b/.github/workflows/image.yml
@@ -63,7 +63,7 @@ jobs:
 
   build-production:
     runs-on: ubuntu-24.04
-    if: github.ref_name == github.event.repository.default_branch
+    # if: github.ref_name == github.event.repository.default_branch
     name: Build and push production images
     permissions:
       contents: read
