--- a/.github/workflows/image.yml
+++ b/.github/workflows/image.yml
@@ -85,7 +85,7 @@ jobs:
           publish_on_pr: true
           # TODO: remove this once we cut over GoCD to using gha for prod images
           tag_suffix: -gha
-          google_ar_image_name: us-central1-docker.pkg.dev/sentryio/taskbroker/image:${{ github.sha }}
+          google_ar_image_name: us-central1-docker.pkg.dev/sentryio/taskbroker/image
           google_workload_identity_provider: projects/868781662168/locations/global/workloadIdentityPools/prod-github/providers/github-oidc-pool
           google_service_account: gha-gcr-push@sac-prod-sa.iam.gserviceaccount.com
 
@@ -103,7 +103,7 @@ jobs:
           publish_on_pr: true
           # TODO: remove this once we cut over GoCD to using gha for prod images
           tag_suffix: -gha
-          google_ar_image_name: us-central1-docker.pkg.dev/sentryio/taskworker/image:${{ github.sha }}
+          google_ar_image_name: us-central1-docker.pkg.dev/sentryio/taskworker/image
           google_workload_identity_provider: projects/868781662168/locations/global/workloadIdentityPools/prod-github/providers/github-oidc-pool
           google_service_account: gha-gcr-push@sac-prod-sa.iam.gserviceaccount.com
 
